welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
ColumnByColumn:8: error: not found: value pct
      cpt = pct + 1
            ^